packages/zeroboost/build.log
   Compiling libc v0.2.183
   Compiling zerocopy v0.8.27
   Compiling ahash v0.8.12
   Compiling solana-frozen-abi-macro v1.16.25
   Compiling solana-frozen-abi v1.16.25
   Compiling anyhow v1.0.80
   Compiling crunchy v0.2.2
   Compiling schemars v0.8.21
   Compiling uint v0.9.5
   Compiling anchor-syn v0.29.0
   Compiling jobserver v0.1.28
   Compiling cc v1.0.90
   Compiling hashbrown v0.13.2
   Compiling borsh v0.10.3
   Compiling pyth-sdk v0.8.0
   Compiling blake3 v1.5.1
   Compiling solana-program v1.16.25
   Compiling anchor-attribute-constant v0.29.0
   Compiling anchor-attribute-access-control v0.29.0
   Compiling anchor-derive-accounts v0.29.0
   Compiling anchor-attribute-event v0.29.0
   Compiling anchor-attribute-error v0.29.0
   Compiling anchor-attribute-account v0.29.0
   Compiling anchor-derive-serde v0.29.0
   Compiling anchor-attribute-program v0.29.0
Error: Function _ZN112_$LT$solana_program..instruction..InstructionError$u20$as$u20$solana_frozen_abi..abi_example..AbiEnumVisitor$GT$13visit_for_abi17ha481adfdaa9fdae1E Stack offset of 4144 exceeded max offset of 4096 by 48 bytes, please minimize large stack variables. Estimated function frame size: 4224 bytes. Exceeding the maximum stack offset may cause undefined behavior during execution.

   Compiling spl-program-error v0.3.0
   Compiling solana-zk-token-sdk v1.16.25
   Compiling spl-discriminator v0.1.0
   Compiling spl-token v4.0.0
   Compiling anchor-lang v0.29.0
   Compiling spl-memo v4.0.0
   Compiling spl-math v0.2.0
   Compiling mpl-token-metadata v3.2.3
   Compiling pyth-sdk-solana v0.10.2
   Compiling spl-pod v0.1.0
   Compiling spl-type-length-value v0.3.0
   Compiling curve v0.1.0 (/mnt/c/Users/rolan/projects/hashfund/packages/zeroboost/curve)
   Compiling spl-tlv-account-resolution v0.4.0
   Compiling spl-token-metadata-interface v0.2.0
warning: unused import: `Math`
 --> curve/src/curve/constant_curve.rs:3:40
  |
3 | use crate::safe_number::safe_number::{ Math, NewSafeNumber, SafeNumber };
  |                                        ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: `curve` (lib) generated 1 warning
   Compiling spl-transfer-hook-interface v0.3.0
error[E0061]: this function takes 4 arguments but 3 arguments were supplied
  --> curve/src/main.rs:26:20
   |
26 |     let token_a =  ConstantCurveCalculator::calculate_amount_out(
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
27 |         initial_price,
   |         ------------- expected `u64`, found `SafeNumber`
28 |         1_000_000_000,
29 |         curve::TradeDirection::BtoA
   |         --------------------------- argument #3 of type `u64` is missing
   |
note: associated function defined here
  --> curve/src/curve/mod.rs:14:8
   |
14 |     fn calculate_amount_out(
   |        ^^^^^^^^^^^^^^^^^^^^
15 |         amount: u64,
   |         ------
16 |         virtual_token_reserve: u64,
17 |         virtual_pair_reserve: u64,
   |         --------------------
help: provide the argument
   |
26 -     let token_a =  ConstantCurveCalculator::calculate_amount_out(
27 -         initial_price,
28 -         1_000_000_000,
29 -         curve::TradeDirection::BtoA
30 -     );
26 +     let token_a =  ConstantCurveCalculator::calculate_amount_out(/* u64 */, 1_000_000_000, /* u64 */, curve::TradeDirection::BtoA);
   |

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
  --> curve/src/main.rs:38:9
   |
38 |         ConstantCurveCalculator::calculate_amount_out(
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
39 |             initial_price,
   |             ------------- expected `u64`, found `SafeNumber`
40 |             token_a,
41 |            TradeDirection::AtoB
   |            -------------------- argument #3 of type `u64` is missing
   |
note: associated function defined here
  --> curve/src/curve/mod.rs:14:8
   |
14 |     fn calculate_amount_out(
   |        ^^^^^^^^^^^^^^^^^^^^
15 |         amount: u64,
   |         ------
16 |         virtual_token_reserve: u64,
17 |         virtual_pair_reserve: u64,
   |         --------------------
help: provide the argument
   |
38 -         ConstantCurveCalculator::calculate_amount_out(
39 -             initial_price,
40 -             token_a,
41 -            TradeDirection::AtoB
42 -         )
38 +         ConstantCurveCalculator::calculate_amount_out(/* u64 */, token_a, /* u64 */, TradeDirection::AtoB)
   |

For more information about this error, try `rustc --explain E0061`.
warning: `curve` (bin "curve") generated 1 warning (1 duplicate)
error: could not compile `curve` (bin "curve") due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
